Third commit. Near ending.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,30 @@
                 </div>
             </div>
         </section>
+        <section class="gallery">
+            <img src="/images/gallery-img-1.jpeg" class="gallery-img gallery-img-1">
+            <img src="/images/gallery-img-2.jpeg" class="gallery-img gallery-img-2">
+            <img src="/images/gallery-img-3.jpeg" class="gallery-img gallery-img-3">
+            <img src="/images/gallery-img-4.jpeg" class="gallery-img gallery-img-4">
+            <img src="/images/gallery-img-5.jpeg" class="gallery-img gallery-img-5">
+            <img src="/images/gallery-img-6.jpeg" class="gallery-img gallery-img-6">
+            <img src="/images/gallery-img-7.jpeg" class="gallery-img gallery-img-7">
+            <img src="/images/gallery-img-8.jpeg" class="gallery-img gallery-img-8">
+            <img src="/images/gallery-img-9.jpeg" class="gallery-img gallery-img-9">
+            <img src="/images/gallery-img-10.jpeg" class="gallery-img gallery-img-10">
+            <img src="/images/gallery-img-11.jpeg" class="gallery-img gallery-img-11">
+            <img src="/images/gallery-img-12.jpeg" class="gallery-img gallery-img-12">
+        </section>
+        <section class="contact">
+            <h1 class="contact-heading">Join us and be in the know</h1>
+            <form class="contact-form">
+                <input type="text" placeholder="Enter email address" class="contact-input">
+                <input type="submit" class="contact-btn" value="Sign Up">
+            </form>
+        </section>
+        <section class="footer">
+            <p>@ CodeAndCreate. All rights reserved.</p>
+        </section>
     </div>
 </body>
 </html>
