--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         <section class="day-offer">
             <img src="/images/day-offer-img-one.jpg" class="day-offer-img-one">
             <h1 class="day-offer-heading">Day Offer</h1>
-            <p class="day-offer-paragraph">Fell Better With New Furniture</p>
+            <p class="day-offer-paragraph">Feel Better With New Furniture</p>
             <button class="day-offer-btn">Shop Now</button>
             <img src="/images/day-offer-img-two.jpg" class="day-offer-img-two">
         </section>
